tests/baselines/reference/decoratorOnClassProperty7.errors.txt
decoratorOnClassProperty7.ts(4,5): error TS1240: Unable to resolve signature of property decorator when called as an expression.
  The runtime will invoke the decorator with 2 arguments, but the decorator expects 3.


==== decoratorOnClassProperty7.ts (1 errors) ====
    declare function dec(target: Function, propertyKey: string | symbol, paramIndex: number): void;
    
    class C {
        @dec prop;
        ~~~~
!!! error TS1240: Unable to resolve signature of property decorator when called as an expression.
!!! error TS1240:   The runtime will invoke the decorator with 2 arguments, but the decorator expects 3.
!!! related TS6210 decoratorOnClassProperty7.ts:1:70: An argument for 'paramIndex' was not provided.
    }